src/styles.css
/* ... */
body[md-theme=indigo] .confirmation .booking-id {
    background: #3F51B5;
}

body[md-theme=red] .confirmation .booking-id {
    background: #F44336;
}

body[md-theme=black] .confirmation .booking-id {
    background: #000000;
}

@media(max-width: 600px) {
    .confirmation {
        padding: 20px;
        font-size: 13px;
    }
}

.no-margin {
    margin: 0 !important;
}

.picker-container {
    border-radius: 2px;
    background: white;
}

.bigDateToolbar {
    background: white !important;
    color: black !important;
}

.activity-dialog-container {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-align: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 80;
    overflow: hidden;
}

.activity-dialog,
md-dialog.activity-dialog {
    max-height: 80%;
    max-width: 90%;
    position: relative;
    overflow: auto;
    box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2), 0px 13px 19px 2px rgba(0, 0, 0, 0.14), 0px 5px 24px 4px rgba(0, 0, 0, 0.12);
    display: -ms-flexbox;
    display: flex;
    overflow-x: hidden;
    overflow-y: hidden;
    -ms-flex-direction: column;
    flex-direction: column;
}

.activity-dialog,
md-dialog md-dialog-content {
    padding: 0;
    overflow-x: hidden;
}

.no-margin {
    margin: 0 !important;
}

.leftCard {
    background: rgba(0, 0, 0, .025);
}

.activityBookDialogLarge {
    width: 840px;
    min-height: 600px;
    height: 100%;
}

.leftCardLarge {
    border-right: 1px solid #e4e4e4 !important;
    box-shadow: 1px 0 5px 1px rgba(0, 0, 0, 0.12) !important;
    min-height: 100%;
    min-width: 420px;
    width: 50%;
    position: absolute;
    height: 100%;
    overflow-y: scroll;
}

.leftCardSmall {
    border-bottom: 1px solid #e4e4e4 !important;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08) !important;
}

.rightCardLarge {
    position: absolute;
    right: 0;
    min-width: 420px;
    width: 50%;
    display: block;
    height: 100%;
}

.activity-total-include {
    height: 100%;
}

.couponText {
    font-size: 16px;
}

.couponTextTotal {
    font-size: 16px;
    padding-right: 12px;
}

.listItemAutocomplete {
    padding-left: 0 !important;
}

.addOnQuantityText {
    border: none;
    width: 40px;
    font-weight: 500;
    text-align: center;
    font-size: 16px;
    margin-right: -8px;
    outline: none;
    background: transparent;
}

.activityPaymentSummaryCard {
    margin-bottom: 0 !important;
    margin-top: 0 !important;
    margin-right: 0;
    margin-left: 0;
    background: none;
    box-shadow: none;
    position: relative;
    height: 100%;
}

.activityCardForm {
    margin: 0 16px 0 16px;
}

.detailsForm {
    padding-left: 16px;
    padding-right: 16px;
}

.listItemInputContainer {
    margin: 24px 16px !important;
}

